Better test labels, fix test_whitespace. Why this is now passing is beyond me.

--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -51,7 +51,3 @@ code {
 	display: block;
 	hyphens: none;
 }
-
-*[space=preserve] {
-	white-space: pre-wrap;
-}
